added new backgroun-image, added reset, ifwin functions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 body {
     background-color: #000;
-    color: #fff;
+    color: rgb(17, 212, 34);
+    background-image: url("../images/Marvel_Heroes_Key_Art.jpg");
+    font-size: 2em;
 }
 
 header {
